--- a/package.json
+++ b/package.json
@@ -7,18 +7,24 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.0.3",
+    "axios": "^0.19.2",
     "blueimp-md5": "^2.12.0",
     "immutable": "^4.0.0-rc.12",
+    "nano": "^8.2.2",
+    "pouchdb": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "createDB": "node ./couchDB/createDB.js",
+    "destoryDB": "node ./couchDB/deleteDB.js"
   },
   "eslintConfig": {
     "extends": "react-app"
